Changes: Updated readme

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is a proprietary pieve of code and copyrighted set of assets (graphics, sound). Copying or distribution is not allowed.
+This is proprietary code and copyrighted set of assets (graphics, sound). Copying or distribution is not allowed.
