Changes: removing packaging placeholders

--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -2,4 +2,4 @@ kidpuzzle (0.0.1) unstable; urgency=low
 
   * Initial Release.
 
- -- jakub <jakub@unknown>  Sun, 15 Jan 2012 21:18:26 +0100
+ -- J Pavelek <jpavelek@live.com>  Sun, 15 Jan 2012 21:18:26 +0100
